[metadata]
name = nifi-deploy
author = Mads H. Jakobsen
author_email = ragerin@gmail.com
summary = Easy CLI tool for exporting and importing Nifi templates to and from XML files.

description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8

requires-python = >=3.0

license = MIT

classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration

keywords =
    nifi-deploy
    nifi
    template
    deploy
    nipyapi
    wrapper

[files]
packages =
    nifi-deploy

[entry_points]
    console_scripts =
        nifi-deploy = nifi_deploy:cli